Normalize test classes names